<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height = "130dp"
    android:orientation="horizontal"
    android:background="@color/recipe_card_background">

    <TextView
        android:id="@+id/recipeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:gravity="start"
        android:text="@string/recipe_card_name_placeholder"
        android:textColor="@color/recipe_name_text"
        android:textSize="25sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/estimatedTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/recipeName"
        android:layout_marginStart="20dp"
        android:gravity="start"
        android:text="@string/time"
        android:textColor="@color/recipe_info_text"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/difficulty"
        android:gravity="start"
        android:text="@string/difficulty"
        android:layout_below="@id/estimatedTime"
        android:textColor="@color/recipe_info_text"
        android:textSize="20sp"
        android:layout_marginStart="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/taste"
        android:gravity="start"
        android:layout_below="@id/difficulty"
        android:text="@string/taste"
        android:textColor="@color/recipe_info_text"
        android:textSize="20sp"
        android:layout_marginStart="20dp" />

    <TextView
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:gravity="start"
        android:text="@string/rating"
        android:textColor="@color/recipe_info_text"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>