<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        android:gravity="start"
        android:text="@string/instructions"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/sub_instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/instruction"
        android:layout_marginStart="40dp"
        android:gravity="start"
        android:text="@string/sub_instruction"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/instruction_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="3dp"
        android:gravity="start"
        android:text="@string/number"
        android:textSize="23sp"
        android:textStyle="bold" />

</RelativeLayout>