<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height = "match_parent"
    android:orientation="horizontal"
    android:background="@color/recipe_card_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="@color/header_footer_background">

        <TextView
            android:id="@+id/recipeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="@string/recipe_card_name_placeholder"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/estimatedTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:text="@string/time"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/difficulty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="130dp"
            android:text="@string/difficulty"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/taste"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="160dp"
            android:text="@string/taste"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="190dp"
            android:text="@string/rating"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/text_ingredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="245dp"
        android:layout_marginBottom="70dp"
        android:gravity="start"
        android:includeFontPadding="false"
        android:text="@string/ingredients"
        android:textColor="@color/black"
        android:textSize="25sp" />


    <ListView
        android:id="@+id/ingredients_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="280dp"
        android:divider="@null">

    </ListView>

    <Spinner
        android:id="@+id/servingNum"
        android:layout_width="130dp"
        android:layout_height="35dp"
        android:layout_alignEnd="@+id/text_ingredients"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="242dp"
        android:layout_marginEnd="40dp"

        android:background="@color/header_footer_background"
        android:gravity="center"
        android:theme="@style/spinnerTheme"
        />


</RelativeLayout>