<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@color/header_footer_background">

    <TextView
        android:id="@+id/editIngredientName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editIngredient"
        android:layout_marginStart="100dp"
        android:text="@string/ingredient"
        android:textColor="@color/black"

        android:textSize="20sp" />

    <TextView
        android:id="@+id/editIngredientUnitName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editIngredientUnit"
        android:layout_centerVertical="true"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="15dp"
        android:layout_toEndOf="@id/editAmount"
        android:text="@string/unit"
        android:textColor="@color/black"

        android:textSize="20sp" />

    <TextView
        android:id="@+id/editAmountName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editAmount"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@id/editIngredient"

        android:text="@string/amount"
        android:textColor="@color/black"

        android:textSize="20sp" />

    <EditText
        android:id="@+id/editIngredient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="20dp"

        android:ems="10"
        android:inputType="textNoSuggestions"
        android:textColor="@color/header_alt"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/editAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@id/editIngredient"

        android:ems="3"
        android:inputType="numberDecimal"
        android:textColor="@color/header_alt"
        android:textSize="25sp" />

    <Spinner
        android:id="@+id/editIngredientUnit"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="30dp"
        android:layout_toEndOf="@id/editAmount" />

    <Button
        android:id="@+id/delete_dialog_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"

        android:text="@string/delete"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:theme="@style/buttonAltRedTheme" />

    <Button
        android:id="@+id/cancel_dialog_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"

        android:text="@string/cancel"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:theme="@style/buttonPastelGreenTheme" />

    <Button
        android:id="@+id/save_dialog_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"

        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:theme="@style/buttonPastelGreenTheme" />

</RelativeLayout>