<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="comp3350.littlechef.presentation.HomeActivity">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name" />

    <ImageView
        android:id="@+id/imageMortarboard"
        android:layout_width="206dp"
        android:layout_height="206dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/littlechef" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="false"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/recipes_button"
            android:id="@+id/buttonRecipes"
            android:onClick="implement" /> //TODO implement

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_recipe_button"
            android:id="@+id/buttonAddRecipe"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="60dp"
            android:onClick="implement" /> //TODO implement

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/meal_plan_button"
            android:enabled="false"
            android:id="@+id/buttonMealPlans" />
    </LinearLayout>

</RelativeLayout>
