<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:orientation="vertical"
    android:windowSoftInputMode="adjustResize">
    tools:context=".presentation.AddInstructionActivity">

    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/workingRecipeName"
            android:layout_width="550dp"
            android:layout_height="wrap_content"
            android:textSize="30sp"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/cancel_dialog_button"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@drawable/round_button"
            android:text="@string/x_sign"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:theme="@style/buttonWhiteTheme" />

    </LinearLayout>

    <Button
        android:id="@+id/save_dialog_button"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="150dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/round_button"
        android:text="@string/save_changes"
        android:textColor="@color/black"
        android:textSize="15sp"/>

    <Button
        android:id="@+id/delete_dialog_button"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="150dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/round_button"
        android:text="@string/delete"
        android:textColor="@color/black"
        android:textSize="15sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:hint="Instruction Step">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/instruction"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:lines="2" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Instruction details">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sub_instruction"
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:inputType="textMultiLine"
            android:lines="10"
            android:gravity="top" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>

